<resources>
    <string name="app_name">myIM3 Guard</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="pkey_host_rc">host_rc</string>
    <string name="pkey_host">host</string>
    <string name="pkey_source_rc">source_rc</string>
    <string name="pkey_source">source</string>
    <string name="pkey_textsize">textSize</string>
    <string name="pkey_default_app">default_app</string>
</resources>